fix jumpy text?

--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -3,7 +3,7 @@ html,body{height:100%;}
     display: inline-block;
     width: 20px;
     height: 20px;
-    transition: .15s;
+    transition: background-image .15s;
     position: relative;
     top: 2px;
 }
@@ -23,7 +23,7 @@ html,body{height:100%;}
     padding: 10px;
     width: calc(100% - 10px);
     background: transparent;
-    transition: .15s;
+    transition: box-shadow .15s, background-color .15s;
 }
 .nav ul {
     list-style: none;
@@ -49,7 +49,7 @@ html,body{height:100%;}
     color: white;
     font-weight: bold;
     padding-left: 5px;
-    transition: .15s;
+    transition: color .15s;
 }
 #ann{
     background-image: url("../img/announcement.svg");
